2017-09-20  Sebastian Peryt  <sebastian.peryt@intel.com>

	* config.gcc: Support "knm".
	* config/i386/driver-i386.c (host_detect_local_cpu): Detect "knm".
	* config/i386/i386-c.c (ix86_target_macros_internal): Handle
	PROCESSOR_KNM.
	* config/i386/i386.c (m_KNM): Define.
	(processor_target_table): Add "knm".
	(PTA_KNM): Define.
	(ix86_option_override_internal): Add "knm".
	(ix86_issue_rate): Add PROCESSOR_KNM.
	(ix86_adjust_cost): Ditto.
	(ia32_multipass_dfa_lookahead): Ditto.
	(get_builtin_code_for_version): Handle PROCESSOR_KNM.
	(fold_builtin_cpu): Add M_INTEL_KNM.
	* config/i386/i386.h (processor_costs): Define TARGET_KNM.
	(processor_type): Add PROCESSOR_KNM.
	* config/i386/x86-tune.def: Add m_KNM.
	* doc/invoke.texi: Add knm as x86 -march=/-mtune= CPU type.

2017-09-20  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/80213
	* graphite-scop-detection.c (trivially_empty_bb_p): Labels
	are allowed in empty BBs as well.
	(canonicalize_loop_closed_ssa): Also look for other complex
	edges.
	(scop_detection::get_sese): Include the loop-closed PHI block
	in loop SESEs.
	(scop_detection::merge_sese): Remove code adding extra blocks.
	(scop_detection::region_has_one_loop): Adjust for get_sese changes.
	(build_scops): Assert the final returned scop is invalid.

2017-09-20  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/82264
	* tree-ssa-sccvn.c (vn_phi_eq): Use safe_dyn_cast to check
	for GIMPLE_CONDs.
	(vn_phi_lookup): Likewise.
	(vn_phi_insert): Likewise.

2017-09-20  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (tree_add_const_value_attribute): For INTEGER_CST
	that fits into uhwi or shwi, add DW_AT_const_value regardless
	of early_dwarf without going through RTL, using add_AT_unsigned
	or add_AT_int.

	* dwarf2out.c (DEBUG_LTO_DWO_INFO_SECTION): Reorder defines.
	(DEBUG_LTO_ABBREV_SECTION): Likewise.
	(DEBUG_LTO_MACINFO_SECTION): Likewise.
	(DEBUG_MACRO_SECTION): Likewise.
	(DEBUG_LTO_MACRO_SECTION): Likewise.