@@ -13161,14 +13161,12 @@
 
 ; Some 32-bit ABIs do not have a red zone, so the stack deallocation has to
 ; stay behind all restores from the stack, it cannot be reordered to before
-; one.  See PR77687.  This insn is an add or mr, and a stack_tie on the
-; operands of that.
+; one.  See PR77687.  This insn is an add or mr, and a memory clobber.
 (define_insn "stack_restore_tie"
   [(set (match_operand:SI 0 "gpc_reg_operand" "=r,r")
 	(plus:SI (match_operand:SI 1 "gpc_reg_operand" "r,r")
 		 (match_operand:SI 2 "reg_or_cint_operand" "O,rI")))
-   (set (mem:BLK (match_dup 0)) (const_int 0))
-   (set (mem:BLK (match_dup 1)) (const_int 0))]
+   (set (mem:BLK (scratch)) (const_int 0))]
   "TARGET_32BIT"
   "@
    mr %0,%1
